--- a/app/src/main/res/layout/frg_default_product.xml
+++ b/app/src/main/res/layout/frg_default_product.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-
+        <import type="com.xereon.xereon.data.util.PriceUtils"/>
         <variable
             name="product"
             type="com.xereon.xereon.data.model.Product" />
@@ -55,7 +55,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="44dp"
             android:fontFamily="@font/roboto"
-            android:text="Überprüfen Sie Ihre Verbindung und versuchen Sie es später erneut.\nDieses Produkt könnte auch vom Betreiber entfernt worden sein."
+            android:text="Überprüfen Sie Ihre Verbindung. Dieses Produkt kann auch vom Betreiber entfernt worden sein."
             android:textAlignment="center"
             android:textColor="@color/text_gray"
             android:textSize="14sp"
@@ -68,14 +68,15 @@
 
         <Button
             android:id="@+id/store_not_found_retry"
-            android:layout_width="130dp"
-            android:layout_height="43dp"
+            android:layout_width="150dp"
+            android:layout_height="52dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/button"
             android:text="Wiederholen"
             android:textAllCaps="false"
             android:textColor="@color/white"
             android:textSize="16sp"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/store_not_found_descr"
@@ -101,7 +102,6 @@
             app:show2="@{isSuccessful}">
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/product_scroll_child"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/white">
@@ -180,10 +180,10 @@
                     android:textColor="@color/white"
                     android:textSize="13sp"
                     android:visibility="gone"
+                    tools:visibility="visible"
                     app:isVisible="@{product.appoffer}"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/product_price"
-                    tools:visibility="visible" />
+                    app:layout_constraintTop_toBottomOf="@id/product_price" />
 
                 <TextView
                     android:id="@+id/product_description_title"
@@ -219,18 +219,6 @@
                     app:layout_constraintTop_toBottomOf="@id/product_description_title"
                     tools:text="-----" />
 
-                <View
-                    android:id="@+id/barrier"
-                    android:layout_width="match_parent"
-                    android:layout_height="0.5dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginEnd="8dp"
-                    android:background="@color/gray_5"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/product_description" />
-
                 <NumberPicker
                     android:id="@+id/product_number_picker"
                     android:layout_width="wrap_content"
@@ -239,15 +227,15 @@
                     app:layout_constraintEnd_toStartOf="@id/product_unit"
                     app:layout_constraintHorizontal_chainStyle="packed"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/barrier" />
+                    app:layout_constraintTop_toBottomOf="@id/product_description" />
 
                 <TextView
                     android:id="@+id/product_unit"
                     android:layout_width="80dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
-                    android:fontFamily="@font/roboto"
-                    android:text="@{String.valueOf(product.unit)}"
+                    android:fontFamily="@font/roboto_medium"
+                    android:text="@{PriceUtils.INSTANCE.getBaseUnit(product.unit)}"
                     android:textColor="@color/black"
                     android:textSize="14sp"
                     app:layout_constraintBottom_toBottomOf="@id/product_number_picker"
@@ -261,9 +249,10 @@
                     android:layout_width="80dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="32dp"
-                    android:fontFamily="@font/roboto_medium"
+                    android:fontFamily="@font/roboto_bold"
                     android:textColor="@color/primary"
                     android:textSize="16sp"
+                    app:priceStartingValue="@{product}"
                     app:layout_constraintBottom_toBottomOf="@id/product_number_picker"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/product_unit"
@@ -273,16 +262,12 @@
                 <Button
                     android:id="@+id/product_add_to_cart"
                     android:layout_width="0dp"
-                    android:layout_height="45dp"
+                    android:layout_height="56dp"
                     android:layout_marginStart="32dp"
                     android:layout_marginTop="32dp"
                     android:layout_marginEnd="32dp"
                     android:background="@drawable/button"
-                    android:drawableEnd="@drawable/ic_add_shopping_cart"
-                    android:drawableTint="@color/white"
                     android:fontFamily="@font/roboto_medium"
-                    android:paddingStart="25dp"
-                    android:paddingEnd="25dp"
                     android:text="In den Einkaufswagen"
                     android:textAllCaps="false"
                     android:textColor="@color/white"
@@ -292,47 +277,45 @@
                     app:layout_constraintTop_toBottomOf="@id/product_number_picker"
                     app:layout_constraintWidth_max="330dp" />
 
-
-                <RelativeLayout
-                    android:id="@+id/product_store_info"
+                <ImageView
+                    android:id="@+id/product_store_img"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="185dp"
                     android:layout_marginTop="24dp"
-                    app:layout_constraintTop_toBottomOf="@id/product_add_to_cart">
+                    android:foreground="#80000000"
+                    android:scaleType="centerCrop"
+                    app:imageURL="@{product.officeImageURL}"
+                    app:layout_constraintTop_toBottomOf="@id/product_add_to_cart"/>
 
-                    <ImageView
-                        android:id="@+id/product_store_img"
-                        android:layout_width="match_parent"
-                        android:layout_height="185dp"
-                        android:foreground="#90000000"
-                        android:scaleType="centerCrop"
-                        app:imageURL="@{product.officeImageURL}" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:fontFamily="@font/roboto_medium"
+                    android:text="Weitere Produkte von"
+                    android:textColor="@color/white"
+                    android:textSize="14sp"
+                    app:layout_constraintTop_toTopOf="@id/product_store_img"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"/>
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerHorizontal="true"
-                        android:layout_marginTop="16dp"
-                        android:fontFamily="@font/roboto_medium"
-                        android:text="Weitere Produkte von"
-                        android:textColor="@color/white"
-                        android:textSize="14sp" />
-
-                    <TextView
-                        android:id="@+id/product_store_name"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerInParent="true"
-                        android:layout_marginStart="16dp"
-                        android:layout_marginEnd="16dp"
-                        android:fontFamily="@font/roboto_bold"
-                        android:maxLines="2"
-                        android:text="@{product.storeName}"
-                        android:textColor="@color/white"
-                        android:textSize="28sp"
-                        tools:text="Store name" />
-
-                </RelativeLayout>
+                <TextView
+                    android:id="@+id/product_store_name"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:fontFamily="@font/roboto_bold"
+                    android:textAlignment="center"
+                    android:maxLines="2"
+                    android:text="@{product.storeName}"
+                    android:textColor="@color/white"
+                    android:textSize="28sp"
+                    tools:text="Store name"
+                    app:layout_constraintTop_toTopOf="@id/product_store_img"
+                    app:layout_constraintBottom_toBottomOf="@id/product_store_img"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"/>
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/product_products_same_store"
@@ -340,23 +323,19 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:nestedScrollingEnabled="false"
-                    app:layout_constraintTop_toBottomOf="@id/product_store_info"
-                    tools:itemCount="2"
-                    tools:listitem="@layout/recycler_product_vertical" />
+                    app:layout_constraintTop_toBottomOf="@id/product_store_img"
+                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+                    app:spanCount="2" />
 
                 <Button
                     android:id="@+id/product_more_store"
                     android:layout_width="0dp"
-                    android:layout_height="45dp"
+                    android:layout_height="56dp"
                     android:layout_marginStart="32dp"
                     android:layout_marginTop="16dp"
                     android:layout_marginEnd="32dp"
                     android:background="@drawable/button"
-                    android:drawableEnd="@drawable/ic_arrow_right"
-                    android:drawableTint="@color/white"
                     android:fontFamily="@font/roboto_medium"
-                    android:paddingStart="15dp"
-                    android:paddingEnd="15dp"
                     android:text="Mehr von diesem Unternehmen"
                     android:textAllCaps="false"
                     android:textColor="@color/white"
@@ -382,13 +361,18 @@
                     app:layout_constraintTop_toBottomOf="@id/product_more_store" />
 
                 <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/product_matching_list"
+                    android:id="@+id/product_similar_list"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="230dp"
                     android:layout_marginTop="8dp"
+                    android:clipToPadding="false"
                     android:orientation="horizontal"
-                    android:paddingBottom="32dp"
-                    app:layout_constraintTop_toBottomOf="@id/product_matching_title" />
+                    android:paddingStart="8dp"
+                    android:paddingEnd="8dp"
+                    app:isVisible="@{!isLoading}"
+                    tools:listitem="@layout/recycler_product_horizontal"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    app:layout_constraintTop_toBottomOf="@id/product_matching_title"/>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.core.widget.NestedScrollView>
