--- a/app/src/main/res/layout/frg_search.xml
+++ b/app/src/main/res/layout/frg_search.xml
@@ -59,7 +59,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:text="Suchen Sie geziehlt nach Filialen"
-            android:textColor="@color/error"
+            android:textColor="@color/primary"
             android:fontFamily="@font/roboto_bold"
             android:textSize="18sp"
             app:isVisible="@{noSearch}"
@@ -98,11 +98,14 @@
             app:layout_constraintWidth_max="310dp"
             app:layout_constraintTop_toBottomOf="@id/search_img"/>
 
-
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/search_testing_recycler"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:id="@+id/searchTestingRecycler"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_width="0dp"
+            android:layout_height="0dp"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
