--- a/app/src/main/res/layout/recycler_store_vertical.xml
+++ b/app/src/main/res/layout/recycler_store_vertical.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="85dp"
         android:layout_marginBottom="4dp"
-        android:background="@color/gray_0"
+        android:background="@color/gray_1"
         android:foreground="?selectableItemBackground"
         android:orientation="vertical">
 
@@ -32,36 +32,59 @@
 
         <TextView
             android:id="@+id/recycler_store_name"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginStart="95dp"
             android:ellipsize="end"
             android:fontFamily="@font/roboto_medium"
-            android:maxLines="2"
-            android:paddingEnd="40dp"
-            android:text="@{store.name}"
+            android:lines="1"
+            android:layout_marginEnd="40dp"
+            android:text="@{store.name.trim()}"
             android:textColor="@color/black"
             android:textSize="16sp"
-            app:layout_constraintBottom_toTopOf="@id/recycler_store_type"
+            app:layout_constraintBottom_toTopOf="@id/recycler_store_city"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintVertical_chainStyle="packed"
-            tools:text="Lebensmittel" />
+            tools:text="Netto Marken-Discount" />
 
         <TextView
-            android:id="@+id/recycler_store_type"
-            android:layout_width="wrap_content"
+            android:id="@+id/recycler_store_city"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginStart="95dp"
+            android:layout_marginEnd="40dp"
+            android:ellipsize="end"
+            android:fontFamily="@font/roboto"
+            android:lines="1"
+            android:text="@{store.city}"
+            android:textSize="12sp"
+            android:textColor="@color/gray_7"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/recycler_store_type"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/recycler_store_name"
+            tools:text="Supermarkt" />
+
+        <TextView
+            android:id="@+id/recycler_store_type"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginStart="95dp"
+            android:layout_marginEnd="40dp"
             android:ellipsize="end"
             android:fontFamily="@font/roboto_bold"
             android:lines="1"
-            android:text="@{store.type}"
+            android:text="@{store.type.trim()}"
             android:textSize="13sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/recycler_store_name"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/recycler_store_city"
             app:textCategoryColor="@{store.category}"
             tools:text="Supermarkt" />
 
