--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,21 +1,9 @@
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme.Material" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryDark">@color/black</item>
-        <item name="colorAccent">@color/secondary</item>
-
-        <item name="android:statusBarColor">@color/primary</item>
-        <item name="android:windowTranslucentStatus">false</item>
-        <item name="android:windowLightStatusBar">false</item>
-
-        <item name="android:windowAnimationStyle">@null</item>
-    </style>
-    <style name="AppTheme.Material" parent="Theme.MaterialComponents.Light.NoActionBar.Bridge">
-        <item name="colorPrimary">@color/primary</item>
-        <item name="colorPrimaryDark">@color/black</item>
-        <item name="colorAccent">@color/secondary</item>
+        <item name="colorAccent">@color/primary</item>
 
         <item name="android:statusBarColor">@color/gray_1</item>
         <item name="android:windowLightStatusBar">true</item>
@@ -23,6 +11,11 @@
         <item name="android:textColorPrimary">@color/black</item>
 
         <item name="android:windowAnimationStyle">@null</item>
+    </style>
+    <style name="SplashScreenTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <item name="android:windowBackground">@drawable/splash_image</item>
+        <item name="android:statusBarColor">@color/gray_1</item>
+        <item name="android:windowLightStatusBar">true</item>
     </style>
 
 
