--- a/app/src/main/res/drawable/ic_filter.xml
+++ b/app/src/main/res/drawable/ic_filter.xml
@@ -1,10 +1,15 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24"
-    android:tint="?attr/colorControlNormal">
+    android:viewportWidth="90"
+    android:viewportHeight="90">
   <path
-      android:fillColor="@android:color/white"
-      android:pathData="M4.25,5.61C6.27,8.2 10,13 10,13v6c0,0.55 0.45,1 1,1h2c0.55,0 1,-0.45 1,-1v-6c0,0 3.72,-4.8 5.74,-7.39C20.25,4.95 19.78,4 18.95,4H5.04C4.21,4 3.74,4.95 4.25,5.61z"/>
+      android:fillColor="#FF000000"
+      android:pathData="M36,20.1c-4,0 -7.4,2.7 -8.5,6.4h-9.1C17,26.5 16,27.6 16,29s1.1,2.5 2.5,2.5h9.1c1,3.7 4.5,6.4 8.5,6.4c4.1,0 7.5,-2.7 8.6,-6.4l36.9,0c1.4,0 2.5,-1.1 2.5,-2.5s-1.1,-2.5 -2.5,-2.5l-36.9,0C43.5,22.8 40.1,20.1 36,20.1zM36.1,25.1c2.1,0 3.9,1.7 3.9,3.9s-1.8,3.9 -3.9,3.9s-3.9,-1.7 -3.9,-3.9S34,25.1 36.1,25.1z"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M66.1,40.1c-4,0 -7.4,2.7 -8.5,6.4H18.5C17,46.5 16,47.6 16,49s1.1,2.5 2.5,2.5h39.1c1,3.7 4.5,6.4 8.5,6.4c4.1,0 7.5,-2.7 8.6,-6.4h6.9c1.4,0 2.5,-1.1 2.5,-2.5c0,-1.4 -1.1,-2.5 -2.5,-2.5h-6.9C73.6,42.8 70.2,40.1 66.1,40.1zM66.2,45.1c2.1,0 3.9,1.7 3.9,3.9c0,2.2 -1.8,3.9 -3.9,3.9c-2.1,0 -3.9,-1.7 -3.9,-3.9S64,45.1 66.2,45.1z"/>
+  <path
+      android:fillColor="#FF000000"
+      android:pathData="M48,62.1c-4,0 -7.4,2.7 -8.5,6.4H18.5C17,68.5 16,69.6 16,71s1.1,2.5 2.5,2.5h21.1c1,3.7 4.5,6.4 8.5,6.4c4.1,0 7.5,-2.7 8.6,-6.4h24.9c1.4,0 2.5,-1.1 2.5,-2.5s-1.1,-2.5 -2.5,-2.5H56.6C55.5,64.8 52.1,62.1 48,62.1zM48.1,67.1c2.1,0 3.9,1.7 3.9,3.9c0,2.2 -1.8,3.9 -3.9,3.9s-3.9,-1.7 -3.9,-3.9C44.3,68.8 46,67.1 48.1,67.1z"/>
 </vector>
