--- a/app/src/main/res/layout/frg_default_product.xml
+++ b/app/src/main/res/layout/frg_default_product.xml
@@ -71,10 +71,8 @@
             android:layout_width="150dp"
             android:layout_height="52dp"
             android:layout_marginTop="20dp"
-            android:background="@drawable/button"
             android:text="Wiederholen"
             android:textAllCaps="false"
-            android:textColor="@color/white"
             android:textSize="16sp"
             android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
@@ -123,7 +121,7 @@
                     android:layout_marginEnd="16dp"
                     android:backgroundTint="@color/primary"
                     android:src="@drawable/ic_add_shopping_cart"
-                    android:tint="@color/white"
+                    app:tint="@color/white"
                     app:borderWidth="0dp"
                     app:layout_constraintBottom_toBottomOf="@id/product_img"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -266,12 +264,8 @@
                     android:layout_marginStart="32dp"
                     android:layout_marginTop="32dp"
                     android:layout_marginEnd="32dp"
-                    android:background="@drawable/button"
-                    android:fontFamily="@font/roboto_medium"
                     android:text="In den Einkaufswagen"
                     android:textAllCaps="false"
-                    android:textColor="@color/white"
-                    android:textSize="14sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/product_number_picker"
@@ -334,12 +328,8 @@
                     android:layout_marginStart="32dp"
                     android:layout_marginTop="16dp"
                     android:layout_marginEnd="32dp"
-                    android:background="@drawable/button"
-                    android:fontFamily="@font/roboto_medium"
                     android:text="Mehr von diesem Unternehmen"
                     android:textAllCaps="false"
-                    android:textColor="@color/white"
-                    android:textSize="14sp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/product_products_same_store"
