--- a/app/src/main/res/layout/frg_search.xml
+++ b/app/src/main/res/layout/frg_search.xml
@@ -1,111 +1,330 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+
     <data>
+
+        <variable
+            name="isSorting"
+            type="Boolean" />
+
+        <variable
+            name="alreadySearched"
+            type="Boolean" />
+
         <variable
             name="noResults"
             type="Boolean" />
+
         <variable
-            name="noSearch"
+            name="isError"
+            type="Boolean" />
+
+        <variable
+            name="isSearchingPlace"
             type="Boolean" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        xmlns:tools="http://schemas.android.com/tools"
         tools:context=".ui.search.SearchFragment">
 
-        <ImageView
-            android:id="@+id/search_img"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:isVisible="@{noSearch}"
-            tools:visibility="visible"
-            android:src="@drawable/img_undraw_search"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.4"/>
+            android:orientation="vertical"
+            android:layout_gravity="center"
+            android:gravity="center_horizontal"
+            app:isVisible="@{!alreadySearched}">
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/img_undraw_search" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:fontFamily="@font/roboto_bold"
+                android:text="Suche nach Filialen"
+                android:textColor="@color/primary"
+                android:textSize="19sp"/>
+            <TextView
+                android:layout_width="310dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:fontFamily="@font/roboto"
+                android:textAlignment="center"
+                android:text="Suchen Sie gezielt nach Filialen in Ihrer Umgebung"
+                android:textColor="@color/text_gray"
+                android:textSize="14sp"/>
+        </LinearLayout>
 
-        <ImageView
-            android:id="@+id/search_not_found_img"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:isVisible="@{noResults}"
-            tools:visibility="gone"
-            android:src="@drawable/img_undraw_file_searching"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.4"/>
 
-        <TextView
+        <ProgressBar
+            android:id="@+id/search_loading"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:visibility="gone"
-            android:layout_marginTop="16dp"
-            android:text="Keine Ergebnisse gefunden"
-            android:textColor="@color/error"
-            android:fontFamily="@font/roboto_bold"
-            android:textSize="18sp"
-            app:isVisible="@{noResults}"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/search_not_found_img"/>
-        <TextView
+            android:indeterminateTint="@color/primary"
+            android:layout_gravity="center"/>
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="Suchen Sie geziehlt nach Filialen"
-            android:textColor="@color/primary"
-            android:fontFamily="@font/roboto_bold"
-            android:textSize="18sp"
-            app:isVisible="@{noSearch}"
-            tools:visibility="visible"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/search_img"/>
-        <TextView
-            android:layout_width="0dp"
+            app:isVisible="@{isError}"
+            android:layout_gravity="center"
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:fontFamily="@font/roboto_bold"
+                android:text="Konnte Suche nicht durchfürhen"
+                android:textColor="@color/error"
+                android:textSize="16sp"
+                android:visibility="gone"
+                tools:visibility="visible" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:fontFamily="@font/roboto"
+                android:text="Keine Verbinding möglich."
+                android:textColor="@color/text_gray"
+                android:textSize="14sp"
+                android:visibility="gone"
+                tools:visibility="visible"/>
+
+            <Button
+                android:id="@+id/button_retry"
+                android:layout_width="150dp"
+                android:layout_height="52dp"
+                android:layout_marginTop="8dp"
+                android:background="@drawable/button"
+                android:text="Wiederholen"
+                android:textAllCaps="false"
+                android:textColor="@color/white"
+                android:textSize="16sp"
+                android:visibility="gone"
+                tools:visibility="visible"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="44dp"
-            android:textColor="@color/text_gray"
-            android:fontFamily="@font/roboto"
-            android:textSize="14sp"
-            android:textAlignment="center"
-            tools:visibility="visible"
-            app:isVisible="@{noSearch}"
-            android:text="Finden Sie Filialen über den Namen, die Kategorie oder den Unternehmenstyp!"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintWidth_max="310dp"
-            app:layout_constraintTop_toBottomOf="@id/search_img"/>
-        <TextView
-            android:layout_width="0dp"
-            tools:visibility="gone"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="44dp"
-            android:textColor="@color/text_gray"
-            android:fontFamily="@font/roboto"
-            android:textSize="14sp"
-            android:textAlignment="center"
+            android:layout_gravity="center"
+            android:gravity="center_horizontal"
             app:isVisible="@{noResults}"
-            android:text="Ihre Suche ergab leider keinen Treffer. Verwenden Sie ggf. allgemeinere Suchbegriffe."
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintWidth_max="310dp"
-            app:layout_constraintTop_toBottomOf="@id/search_img"/>
+            android:orientation="vertical">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/img_undraw_empty"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Keine Filialen gefunden"
+                android:layout_marginTop="8dp"
+                android:textColor="@color/primary"
+                app:isVisible="@{noResults}"
+                android:fontFamily="@font/roboto_bold"
+                android:textSize="18sp"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/text_gray"
+                android:fontFamily="@font/roboto"
+                android:textSize="14sp"
+                app:isVisible="@{noResults}"
+                android:layout_marginTop="4dp"
+                android:textAlignment="center"
+                android:text="Es wurden keine Filielan mit den angegeben Parametern gefunden." />
+        </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/searchTestingRecycler"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_width="0dp"
-            android:layout_height="0dp"/>
+            android:id="@+id/search_recycler"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            app:show="@{alreadySearched}"
+            app:show2="@{!noResults}"
+            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"/>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        <View
+            android:id="@+id/search_sorting_background"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:alpha="0.5"
+            android:background="@color/gray_8"
+            app:isVisible="@{isSorting}"
+            tools:visibility="gone" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/search_fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="16dp"
+            app:backgroundTint="@color/primary"
+            android:src="@drawable/ic_filter"
+            app:tint="@color/white"
+            app:isVisible="@{!isSorting}" />
+
+        <androidx.core.widget.NestedScrollView
+            android:id="@+id/search_bottom_sheet_behaviour"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
+            tools:visibility="gone">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/white"
+                android:elevation="10dp">
+
+                <TextView
+                    android:id="@+id/search_filter_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="16dp"
+                    android:fontFamily="@font/roboto_bold"
+                    android:text="Filter"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <com.google.android.material.chip.ChipGroup
+                    android:id="@+id/search_chip_group_select_filter"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="8dp"
+                    app:chipSpacingVertical="8dp"
+                    app:layout_constraintTop_toBottomOf="@id/search_filter_title"
+                    app:singleSelection="true" />
+
+                <TextView
+                    android:id="@+id/search_location_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="24dp"
+                    android:fontFamily="@font/roboto_bold"
+                    android:text="Suchregion"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/search_chip_group_select_filter" />
+
+                <com.google.android.material.chip.Chip
+                    android:id="@+id/search_chip_location"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    android:text="Herbrechtingen"
+                    app:chipBackgroundColor="@color/gray_3"
+                    app:chipIcon="@drawable/ic_location"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/search_location_title" />
+
+                <CheckBox
+                    android:id="@+id/search_expand_region"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    android:checked="true"
+                    android:fontFamily="@font/roboto"
+                    android:text="Außerhalb der Suchregion suchen"
+                    android:textColor="@color/black"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/search_chip_location" />
+
+                <ImageView
+                    android:id="@+id/search_info_expand_region"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="16dp"
+                    android:src="@drawable/ic_info"
+                    app:layout_constraintBottom_toBottomOf="@id/search_expand_region"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="@id/search_expand_region" />
+
+                <TextView
+                    android:id="@+id/search_sorting_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="24dp"
+                    android:fontFamily="@font/roboto_bold"
+                    android:text="Ergebnisse Sortieren"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/search_expand_region" />
+
+                <RadioGroup
+                    android:id="@+id/search_sort_radio_group"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="78dp"
+                    android:checkedButton="@id/search_sort_default"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/search_sorting_title">
+
+                    <RadioButton
+                        android:id="@+id/search_sort_default"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Erstelldatum" />
+
+                    <RadioButton
+                        android:id="@+id/search_sort_A_Z"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="A -> Z" />
+
+                    <RadioButton
+                        android:id="@+id/search_sort_Z_A"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Z -> A" />
+
+                </RadioGroup>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.core.widget.NestedScrollView>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="64dp"
+            android:background="@color/white"
+            android:layout_gravity="bottom"
+            android:elevation="10dp"
+            app:isVisible="@{isSorting}">
+
+            <Button
+                android:id="@+id/search_search_btn"
+                android:layout_width="210dp"
+                android:layout_height="54dp"
+                android:layout_centerInParent="true"
+                android:text="Filter anwenden"
+                android:textAllCaps="false"
+                app:icon="@drawable/ic_filter" />
+
+        </RelativeLayout>
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
