--- a/app/src/main/res/layout/recycler_store_vertical.xml
+++ b/app/src/main/res/layout/recycler_store_vertical.xml
@@ -35,7 +35,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginStart="95dp"
+            android:layout_marginStart="16dp"
             android:ellipsize="end"
             android:fontFamily="@font/roboto_medium"
             android:lines="1"
@@ -43,50 +43,51 @@
             android:text="@{store.name.trim()}"
             android:textColor="@color/black"
             android:textSize="16sp"
-            app:layout_constraintBottom_toTopOf="@id/recycler_store_city"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@id/recycler_store_image"
+            app:layout_constraintBottom_toTopOf="@id/recycler_store_type"
             app:layout_constraintVertical_chainStyle="packed"
             tools:text="Netto Marken-Discount" />
-
-        <TextView
-            android:id="@+id/recycler_store_city"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="95dp"
-            android:layout_marginEnd="40dp"
-            android:ellipsize="end"
-            android:fontFamily="@font/roboto"
-            android:lines="1"
-            android:text="@{store.city}"
-            android:textSize="12sp"
-            android:textColor="@color/gray_7"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/recycler_store_type"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/recycler_store_name"
-            tools:text="Supermarkt" />
 
         <TextView
             android:id="@+id/recycler_store_type"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginStart="95dp"
+            android:layout_marginStart="16dp"
             android:layout_marginEnd="40dp"
+            android:layout_marginTop="2dp"
             android:ellipsize="end"
             android:fontFamily="@font/roboto_bold"
             android:lines="1"
             android:text="@{store.type.trim()}"
             android:textSize="13sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@id/recycler_store_image"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/recycler_store_city"
+            app:layout_constraintTop_toBottomOf="@id/recycler_store_name"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:textCategoryColor="@{store.category}"
             tools:text="Supermarkt" />
+
+        <TextView
+            android:id="@+id/recycler_store_city"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="32dp"
+            android:layout_marginBottom="5dp"
+            android:ellipsize="end"
+            android:maxLines="1"
+            tools:text="Baden-Württemberg"
+            android:textAlignment="textEnd"
+            android:textSize="12sp"
+            android:fontFamily="@font/roboto"
+            android:textColor="@color/gray_5"
+            android:text="@{store.city}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/recycler_store_image"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
         <ImageView
             android:layout_width="wrap_content"
