--- a/app/src/main/res/layout/frg_default_product.xml
+++ b/app/src/main/res/layout/frg_default_product.xml
@@ -8,96 +8,76 @@
         <variable
             name="product"
             type="com.xereon.xereon.data.model.Product" />
-
-        <variable
-            name="isLoading"
-            type="boolean" />
-
-        <variable
-            name="isSuccessful"
-            type="boolean" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/store_not_found_img"
+        <LinearLayout
+            android:id="@+id/product_error"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/img_undraw_waiting"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.4"
-            app:show="@{!isSuccessful}"
-            app:show2="@{!isLoading}" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:fontFamily="@font/roboto_bold"
-            android:text="Produkt nicht gefunden"
-            android:textColor="@color/error"
-            android:textSize="18sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/store_not_found_img"
-            app:show="@{!isSuccessful}"
-            app:show2="@{!isLoading}" />
-
-        <TextView
-            android:id="@+id/store_not_found_descr"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="44dp"
-            android:fontFamily="@font/roboto"
-            android:text="Überprüfen Sie Ihre Verbindung. Dieses Produkt kann auch vom Betreiber entfernt worden sein."
-            android:textAlignment="center"
-            android:textColor="@color/text_gray"
-            android:textSize="14sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/store_not_found_img"
-            app:layout_constraintWidth_max="310dp"
-            app:show="@{!isSuccessful}"
-            app:show2="@{!isLoading}" />
-
-        <Button
-            android:id="@+id/store_not_found_retry"
-            android:layout_width="150dp"
-            android:layout_height="52dp"
-            android:layout_marginTop="20dp"
-            android:text="Wiederholen"
-            android:textAllCaps="false"
-            android:textSize="16sp"
+            android:gravity="center_horizontal"
+            android:orientation="vertical"
             android:visibility="gone"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/store_not_found_descr"
-            app:show="@{!isSuccessful}"
-            app:show2="@{!isLoading}" />
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/img_undraw_waiting" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="4dp"
+                android:fontFamily="@font/roboto_bold"
+                android:text="Produkt nicht gefunden"
+                android:textColor="@color/error"
+                android:textSize="18sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="8dp"
+                android:fontFamily="@font/roboto"
+                android:text="Überprüfen Sie Ihre Verbindung. Dieses Produkt kann auch vom Betreiber entfernt worden sein."
+                android:textAlignment="center"
+                android:textColor="@color/text_gray"
+                android:textSize="14sp"/>
+
+            <Button
+                android:id="@+id/store_not_found_retry"
+                android:layout_width="150dp"
+                android:layout_height="52dp"
+                android:layout_marginTop="16dp"
+                android:text="Wiederholen"
+                android:textAllCaps="false"
+                android:textSize="16sp" />
+
+        </LinearLayout>
 
         <ProgressBar
+            android:id="@+id/product_loading"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:indeterminateTint="@color/primary"
-            app:isVisible="@{isLoading}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.core.widget.NestedScrollView
-            tools:visibility="gone"
             android:id="@+id/product_scroll_parent"
+            android:visibility="gone"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:show="@{!isLoading}"
-            app:show2="@{isSuccessful}">
+            android:layout_height="match_parent">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -116,6 +96,7 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:id="@+id/product_add_to_cart_fab"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="16dp"
@@ -359,7 +340,6 @@
                     android:orientation="horizontal"
                     android:paddingStart="8dp"
                     android:paddingEnd="8dp"
-                    app:isVisible="@{!isLoading}"
                     tools:listitem="@layout/recycler_product_horizontal"
                     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                     app:layout_constraintTop_toBottomOf="@id/product_matching_title"/>
