--- a/app/src/main/res/layout/frg_search.xml
+++ b/app/src/main/res/layout/frg_search.xml
@@ -8,22 +8,6 @@
         <variable
             name="isSorting"
             type="Boolean" />
-
-        <variable
-            name="alreadySearched"
-            type="Boolean" />
-
-        <variable
-            name="noResults"
-            type="Boolean" />
-
-        <variable
-            name="isError"
-            type="Boolean" />
-
-        <variable
-            name="isSearchingPlace"
-            type="Boolean" />
     </data>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
@@ -32,16 +16,18 @@
         tools:context=".ui.search.SearchFragment">
 
         <LinearLayout
+            android:id="@+id/search_empty"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             android:layout_gravity="center"
             android:gravity="center_horizontal"
-            app:isVisible="@{!alreadySearched}">
+            android:orientation="vertical">
+
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/img_undraw_search" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -49,33 +35,35 @@
                 android:fontFamily="@font/roboto_bold"
                 android:text="Suche nach Filialen"
                 android:textColor="@color/primary"
-                android:textSize="19sp"/>
+                android:textSize="19sp" />
+
             <TextView
                 android:layout_width="310dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
                 android:fontFamily="@font/roboto"
-                android:textAlignment="center"
                 android:text="Suchen Sie gezielt nach Filialen in Ihrer Umgebung"
+                android:textAlignment="center"
                 android:textColor="@color/text_gray"
-                android:textSize="14sp"/>
+                android:textSize="14sp" />
         </LinearLayout>
-
 
         <ProgressBar
             android:id="@+id/search_loading"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:indeterminateTint="@color/primary"
-            android:layout_gravity="center"/>
+            android:visibility="gone" />
 
         <LinearLayout
+            android:id="@+id/search_error"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:isVisible="@{isError}"
             android:layout_gravity="center"
             android:gravity="center_horizontal"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:visibility="gone">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -97,7 +85,7 @@
                 android:textColor="@color/text_gray"
                 android:textSize="14sp"
                 android:visibility="gone"
-                tools:visibility="visible"/>
+                tools:visibility="visible" />
 
             <Button
                 android:id="@+id/button_retry"
@@ -110,50 +98,47 @@
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:visibility="gone"
-                tools:visibility="visible"/>
+                tools:visibility="visible" />
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/search_no_results"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:gravity="center_horizontal"
-            app:isVisible="@{noResults}"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:visibility="gone">
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/img_undraw_empty"/>
+                android:src="@drawable/img_undraw_empty" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Keine Filialen gefunden"
                 android:layout_marginTop="8dp"
-                android:textColor="@color/primary"
-                app:isVisible="@{noResults}"
                 android:fontFamily="@font/roboto_bold"
-                android:textSize="18sp"/>
+                android:text="Keine Filialen gefunden"
+                android:textColor="@color/primary"
+                android:textSize="18sp" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/text_gray"
-                android:fontFamily="@font/roboto"
-                android:textSize="14sp"
-                app:isVisible="@{noResults}"
                 android:layout_marginTop="4dp"
+                android:fontFamily="@font/roboto"
+                android:text="Es wurden keine Filielan mit den angegeben Parametern gefunden."
                 android:textAlignment="center"
-                android:text="Es wurden keine Filielan mit den angegeben Parametern gefunden." />
+                android:textColor="@color/text_gray"
+                android:textSize="14sp" />
         </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/search_recycler"
+            android:id="@+id/search_results"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:show="@{alreadySearched}"
-            app:show2="@{!noResults}"
-            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"/>
+            android:layout_height="match_parent" />
 
         <View
             android:id="@+id/search_sorting_background"
@@ -170,149 +155,104 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
             android:layout_margin="16dp"
-            app:backgroundTint="@color/primary"
             android:src="@drawable/ic_filter"
-            app:tint="@color/white"
-            app:isVisible="@{!isSorting}" />
+            app:backgroundTint="@color/primary"
+            app:isVisible="@{!isSorting}"
+            app:tint="@color/white" />
 
-        <androidx.core.widget.NestedScrollView
+
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/search_bottom_sheet_behaviour"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
-            tools:visibility="gone">
+            android:background="@color/white"
+            android:visibility="gone"
+            tools:visibility="visible"
+            android:layout_gravity="bottom">
 
-            <androidx.constraintlayout.widget.ConstraintLayout
+            <TextView
+                android:id="@+id/search_filter_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="16dp"
+                android:fontFamily="@font/roboto_bold"
+                android:text="Filter"
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <com.google.android.material.chip.ChipGroup
+                android:id="@+id/search_chip_group_select_filter"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/white"
-                android:elevation="10dp">
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                app:chipSpacingVertical="8dp"
+                app:layout_constraintTop_toBottomOf="@id/search_filter_title"
+                app:singleSelection="true" />
 
-                <TextView
-                    android:id="@+id/search_filter_title"
-                    android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/search_sorting_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="24dp"
+                android:fontFamily="@font/roboto_bold"
+                android:text="Ergebnisse Sortieren"
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/search_chip_group_select_filter" />
+
+            <RadioGroup
+                android:id="@+id/search_sort_radio_group"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="78dp"
+                android:checkedButton="@id/search_sort_new_first"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/search_sorting_title">
+
+                <RadioButton
+                    android:id="@+id/search_sort_new_first"
+                    android:layout_width="250dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="16dp"
-                    android:fontFamily="@font/roboto_bold"
-                    android:text="Filter"
-                    android:textColor="@color/black"
-                    android:textSize="18sp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    android:text="Neue Filialen zuerst" />
 
-                <com.google.android.material.chip.ChipGroup
-                    android:id="@+id/search_chip_group_select_filter"
-                    android:layout_width="match_parent"
+                <RadioButton
+                    android:id="@+id/search_sort_old_first"
+                    android:layout_width="250dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginEnd="8dp"
-                    app:chipSpacingVertical="8dp"
-                    app:layout_constraintTop_toBottomOf="@id/search_filter_title"
-                    app:singleSelection="true" />
+                    android:text="Älteste Filialen zuerst" />
 
-                <TextView
-                    android:id="@+id/search_location_title"
-                    android:layout_width="wrap_content"
+                <RadioButton
+                    android:id="@+id/search_sort_A_Z"
+                    android:layout_width="250dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="24dp"
-                    android:fontFamily="@font/roboto_bold"
-                    android:text="Suchregion"
-                    android:textColor="@color/black"
-                    android:textSize="18sp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/search_chip_group_select_filter" />
+                    android:text="A -> Z" />
 
-                <com.google.android.material.chip.Chip
-                    android:id="@+id/search_chip_location"
-                    android:layout_width="wrap_content"
+                <RadioButton
+                    android:id="@+id/search_sort_Z_A"
+                    android:layout_width="250dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
-                    android:text="Herbrechtingen"
-                    app:chipBackgroundColor="@color/gray_3"
-                    app:chipIcon="@drawable/ic_location"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/search_location_title" />
+                    android:text="Z -> A" />
 
-                <CheckBox
-                    android:id="@+id/search_expand_region"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
-                    android:checked="true"
-                    android:fontFamily="@font/roboto"
-                    android:text="Außerhalb der Suchregion suchen"
-                    android:textColor="@color/black"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/search_chip_location" />
+            </RadioGroup>
 
-                <ImageView
-                    android:id="@+id/search_info_expand_region"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="16dp"
-                    android:src="@drawable/ic_info"
-                    app:layout_constraintBottom_toBottomOf="@id/search_expand_region"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="@id/search_expand_region" />
-
-                <TextView
-                    android:id="@+id/search_sorting_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="24dp"
-                    android:fontFamily="@font/roboto_bold"
-                    android:text="Ergebnisse Sortieren"
-                    android:textColor="@color/black"
-                    android:textSize="18sp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/search_expand_region" />
-
-                <RadioGroup
-                    android:id="@+id/search_sort_radio_group"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginBottom="78dp"
-                    android:checkedButton="@id/search_sort_default"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/search_sorting_title">
-
-                    <RadioButton
-                        android:id="@+id/search_sort_default"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Erstelldatum" />
-
-                    <RadioButton
-                        android:id="@+id/search_sort_A_Z"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="A -> Z" />
-
-                    <RadioButton
-                        android:id="@+id/search_sort_Z_A"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Z -> A" />
-
-                </RadioGroup>
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-        </androidx.core.widget.NestedScrollView>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="64dp"
-            android:background="@color/white"
             android:layout_gravity="bottom"
+            android:background="@color/white"
             android:elevation="10dp"
+            android:visibility="gone"
             app:isVisible="@{isSorting}">
 
             <Button
