--- a/app/src/main/res/layout/recycler_product_horizontal.xml
+++ b/app/src/main/res/layout/recycler_product_horizontal.xml
@@ -1,56 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="150dp"
+    android:layout_height="230dp"
+    android:layout_marginEnd="5dp"
+    android:orientation="vertical">
 
-    <data>
-        <variable
-            name="product"
-            type="com.xereon.xereon.data.model.SimpleProduct" />
-    </data>
+    <ImageView
+        android:id="@+id/recycler_product_img"
+        android:layout_width="match_parent"
+        android:layout_height="170dp"
+        android:background="@color/gray_1"
+        android:padding="2dp"
+        tools:src="@drawable/img_map" />
 
-    <LinearLayout
-        android:orientation="vertical"
-        android:layout_marginEnd="5dp"
-        android:layout_width="150dp"
-        android:layout_height="230dp">
+    <TextView
+        android:id="@+id/recycler_product_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="4dp"
+        android:ellipsize="end"
+        android:fontFamily="@font/roboto_medium"
+        android:maxLines="2"
+        android:textColor="@color/black"
+        tools:text="Product name" />
 
-        <ImageView
-            android:id="@+id/recycler_product_img"
-            android:layout_width="match_parent"
-            android:layout_height="170dp"
-            android:padding="2dp"
-            app:imageURL="@{product.productImageURL}"
-            android:background="@color/gray_1"
-            android:src="@drawable/img_map"/>
+    <TextView
+        android:id="@+id/recycler_product_price"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginEnd="4dp"
+        android:fontFamily="@font/roboto_bold"
+        android:lines="1"
+        android:textColor="@color/primary"
+        android:textSize="12sp"
+        tools:text="5.00€ / Stück" />
+</LinearLayout>
 
-        <TextView
-            android:id="@+id/recycler_product_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:layout_marginStart="4dp"
-            android:layout_marginEnd="4dp"
-            tools:text="Product name"
-            android:text="@{product.name}"
-            android:maxLines="2"
-            android:ellipsize="end"
-            android:fontFamily="@font/roboto_medium"
-            android:textColor="@color/black"/>
-
-        <TextView
-            android:id="@+id/recycler_product_price"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
-            android:layout_marginEnd="4dp"
-            tools:text="5.00€ / Stück"
-            app:price="@{product.price}"
-            app:unit="@{product.unit}"
-            android:textSize="12sp"
-            android:lines="1"
-            android:fontFamily="@font/roboto_bold"
-            android:textColor="@color/primary"/>
-    </LinearLayout>
-
-</layout>
