--- a/app/src/main/res/layout/recycler_product_vertical.xml
+++ b/app/src/main/res/layout/recycler_product_vertical.xml
@@ -1,98 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-    <data>
-        <variable
-            name="product"
-            type="com.xereon.xereon.data.model.SimpleProduct" />
-    </data>
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginEnd="4dp"
+    android:paddingTop="15dp"
+    android:paddingBottom="20dp">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="4dp"
-        android:paddingTop="15dp"
-        android:paddingBottom="20dp">
+        android:layout_height="wrap_content">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <ImageView
+            android:id="@+id/recycler_product_img"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="180dp"
+            android:background="@color/gray_0"
+            android:paddingStart="8dp"
+            android:paddingTop="8dp"
+            android:paddingEnd="8dp"
+            android:paddingBottom="8dp"
+            android:scaleType="centerInside"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:src="@drawable/img_map" />
 
-            <ImageView
-                android:id="@+id/recycler_product_img"
-                android:layout_width="match_parent"
-                android:layout_height="180dp"
-                android:paddingTop="8dp"
-                android:paddingStart="8dp"
-                android:paddingEnd="8dp"
-                android:paddingBottom="8dp"
-                tools:src="@drawable/img_map"
-                app:imageURL="@{product.productImageURL}"
-                android:background="@color/gray_0"
-                android:scaleType="centerInside"
-                app:layout_constraintTop_toTopOf="parent"/>
+        <TextView
+            android:id="@+id/recycler_only_in_app"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="17dp"
+            android:background="@color/secondary"
+            android:fontFamily="@font/roboto_medium"
+            android:paddingStart="20dp"
+            android:paddingTop="3dp"
+            android:paddingEnd="15dp"
+            android:paddingBottom="3dp"
+            android:text="Nur in der App"
+            android:textColor="@color/white"
+            android:textSize="12sp"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@id/recycler_product_img"
+            app:layout_constraintStart_toStartOf="parent"
+            tools:visibility="visible" />
 
-            <TextView
-                android:id="@+id/recycler_only_in_app"
-                android:visibility="gone"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@color/secondary"
-                android:layout_marginBottom="17dp"
-                android:layout_marginTop="8dp"
-                android:paddingEnd="15dp"
-                android:paddingStart="20dp"
-                android:paddingBottom="3dp"
-                android:paddingTop="3dp"
-                android:textSize="12sp"
-                tools:visibility="visible"
-                app:isVisible="@{product.appoffer}"
-                android:fontFamily="@font/roboto_medium"
-                android:text="Nur in der App"
-                android:textColor="@color/white"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintBottom_toBottomOf="@id/recycler_product_img"/>
+        <TextView
+            android:id="@+id/recycler_product_name"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="6dp"
+            android:layout_marginEnd="24dp"
+            android:ellipsize="end"
+            android:fontFamily="@font/roboto_medium"
+            android:maxLines="2"
+            android:textColor="@color/black"
+            android:textSize="13sp"
+            app:layout_constraintBottom_toTopOf="@id/recycler_product_price"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/recycler_product_img"
+            app:layout_constraintVertical_chainStyle="packed"
+            tools:text="Product Name" />
 
-            <TextView
-                android:id="@+id/recycler_product_name"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:layout_marginEnd="24dp"
-                android:layout_marginTop="6dp"
-                android:maxLines="2"
-                android:textSize="13sp"
-                tools:text="Product Name"
-                android:text="@{product.name}"
-                android:ellipsize="end"
-                android:fontFamily="@font/roboto_medium"
-                android:textColor="@color/black"
-                app:layout_constraintVertical_chainStyle="packed"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/recycler_product_img"
-                app:layout_constraintBottom_toTopOf="@id/recycler_product_price"/>
+        <TextView
+            android:id="@+id/recycler_product_price"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="24dp"
+            android:fontFamily="@font/roboto_bold"
+            android:lines="1"
+            android:textColor="@color/primary"
+            android:textSize="12sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@id/recycler_product_img"
+            app:layout_constraintTop_toBottomOf="@id/recycler_product_name"
+            tools:text="5.00 € / Stück" />
 
-            <TextView
-                android:id="@+id/recycler_product_price"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="24dp"
-                android:layout_marginStart="16dp"
-                android:lines="1"
-                tools:text="5.00 € / Stück"
-                app:price="@{product.price}"
-                app:unit="@{product.unit}"
-                android:textSize="12sp"
-                android:fontFamily="@font/roboto_bold"
-                android:textColor="@color/primary"
-                app:layout_constraintStart_toStartOf="@id/recycler_product_img"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/recycler_product_name"
-                app:layout_constraintBottom_toBottomOf="parent"/>
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </LinearLayout>
-
-</layout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
