--- a/app/src/main/res/layout/shopping_cart_batch.xml
+++ b/app/src/main/res/layout/shopping_cart_batch.xml
@@ -25,6 +25,8 @@
         android:gravity="center"
         android:paddingStart="3dp"
         android:paddingEnd="3dp"
+        android:paddingBottom="1dp"
+        android:paddingTop="1dp"
         android:maxLength="2"
         android:fontFamily="@font/roboto_medium"
         android:text="0"
